[package]
name = "egui-tracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "*"
serde = {version = "1.0.195", features = ["derive"]}
time = {version = "0.3.31", features = ["local-offset", "macros", "formatting"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
eframe = "0.25.0"
